--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,13 @@ body {
   color: #343a40;
   line-height: 1;
 }
+@import url('https://fonts.googleapis.com/css2?family=Amita:wght@400;700&display=swap');
+
+:root {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+}
 /* header */
 .container-fluid.header {
   background: #eee;
@@ -788,4 +795,117 @@ section {
   text-decoration: underline;
   color: #900009;
 }
+/* blog section  */
+.modal {
+  display: block;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(255, 255, 255, 0);
+}
 
+.modal-content {
+  position: relative;
+  background-color: #F5F5F5;
+  margin: 10% auto;
+  padding: 20px;
+  width: 80%;
+  font-size: large;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.animate__hidden {
+  opacity: 0;
+}
+
+.animate__fadeIn {
+  opacity: 1;
+  transition: opacity 0.75s ease-in-out;
+}
+
+.animate__hidden {
+  opacity: 0;
+}
+
+.animate__fadeIn {
+  opacity: 1;
+  transition: opacity 0.75s ease-in-out;
+}
+
+
+.blog-post {
+  margin: 20px;
+  /* Adjust margin as needed */
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease-in-out;
+  max-width: 1200px;
+  /* Adjust the max-width as needed */
+}
+
+.blog-post:hover {
+  transform: scale(1.08);
+  /* Adjust the scale factor as needed */
+}
+
+.blog-post-content {
+  /* Adjust the max-width as needed */
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.animate__hidden {
+  opacity: 0;
+}
+
+.animate__fadeIn {
+  opacity: 1;
+  transition: opacity 0.75s ease-in-out;
+}
+
+.blogheader {
+  display: flex;
+  background-image: url('./assets/blogbanner.svg');
+  /* Replace with your actual hero image URL */
+  background-size: cover;
+  background-position: center;
+  text-align: center;
+  /* Align text to the left */
+  justify-content: center;
+  /* Align contents to the left */
+  padding: 100px 0;
+  position: relative;
+  max-width: 100%;
+}
+
+.blogheader {
+  font-size: 4em;
+  line-height: 1.1;
+  font-family: Amita, Serif;
+}
+
+.posts {
+  margin: 0 auto;
+  width: 1200px;
+}
+/* blog section ends  */
